# agnoresearch

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  web.py
docs/plans/: 2026-02-03-feat-agent-visibility-citations-social-auth-plan.md  2026-02-03-feat-agno-sme-research-agent-plan.md
src/agnoresearch/: __init__.py  agent.py  agents.py  knowledge.py  pipeline.py  prompts.py  schemas.py  tools.py
static/css/: styles.css
static/js/: app.js
templates/: dashboard.html  drafts.html  knowledge.html  layout.html  research.html
