[project]
name = "agnoresearch"
version = "0.1.0"
description = "SME Research Agent for AI Adoption Consulting"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.0",
    "ollama>=0.4.0",
    "crawl4ai>=0.4.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
    "lancedb>=0.6.0",
    "pypdf>=4.0.0",
    "sqlalchemy>=2.0.0",
    "ddgs>=8.0.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agnoresearch"]

[tool.ruff]
line-length = 100
target-version = "py311"
